@@ -8,6 +8,8 @@ internal const val RPL_ISUPPORT = "005"
 internal const val RPL_UMODEIS = "221"
 
 internal const val RPL_CHANNELMODEIS = "324"
+internal const val RPL_TOPIC = "332"
+internal const val RPL_TOPICWHOTIME = "333"
 internal const val RPL_MOTD = "372"
 internal const val RPL_MOTDSTART = "375"
 internal const val RPL_ENDOFMOTD = "376"
