@@ -1,7 +1,8 @@
-package com.dmdirc.ktirc.events
+package com.dmdirc.ktirc.handlers
 
 import com.dmdirc.ktirc.IrcClient
 import com.dmdirc.ktirc.TestConstants
+import com.dmdirc.ktirc.events.*
 import com.dmdirc.ktirc.io.CaseMapping
 import com.dmdirc.ktirc.model.*
 import com.nhaarman.mockitokotlin2.argForWhich
