@@ -2,7 +2,7 @@ package com.dmdirc.ktirc.io
 
 import com.dmdirc.ktirc.IrcClient
 import com.dmdirc.ktirc.TestConstants
-import com.dmdirc.ktirc.events.EventHandler
+import com.dmdirc.ktirc.handlers.EventHandler
 import com.dmdirc.ktirc.events.ServerConnected
 import com.dmdirc.ktirc.events.ServerReady
 import com.dmdirc.ktirc.events.ServerWelcome
