@@ -2,6 +2,7 @@ vNEXT (in development)
 
  * Added support for SCRAM-SHA-1 and SCRAM-SHA-256 SASL mechanisms
  * Added MotdLineReceived event
+ * (Internal) Move event handlers into their own package
 
 v0.7.0
 
